// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eslint default 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/.idea/
/node_modules/
/*.js
/dist
/build
/coverage
/.next
",
    }
  }
/>
`;

exports[`eslint default 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	extends: [
		'./.eslintrc.strict.js',
	].map(require.resolve),
	/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */
	rules: {
		'no-console': 1
	}
};
",
    }
  }
/>
`;

exports[`eslint default 3`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	extends: ['@namics/eslint-config/configurations/es8-react.js'].map(require.resolve),
};
",
    }
  }
/>
`;

exports[`eslint default 4`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:js\\": \\"eslint . -c .eslintrc.strict.js\\"
  },
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"8.0.2\\",
    \\"eslint\\": \\"6.5.1\\",
    \\"eslint-plugin-import\\": \\"2.18.2\\",
    \\"npm-run-all\\": \\"4.1.5\\"
  }
}",
    }
  }
/>
`;

exports[`eslint default 5`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": ".eslintignore,.eslintrc.js,.eslintrc.strict.js,package.json",
    }
  }
/>
`;

exports[`eslint with-githooks 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/.idea/
/node_modules/
/*.js
/dist
/build
/coverage
/.next
",
    }
  }
/>
`;

exports[`eslint with-githooks 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	extends: [
		'./.eslintrc.strict.js',
	].map(require.resolve),
	/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */
	rules: {
		'no-console': 1
	}
};
",
    }
  }
/>
`;

exports[`eslint with-githooks 3`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	extends: ['@namics/eslint-config/configurations/es8-react.js'].map(require.resolve),
};
",
    }
  }
/>
`;

exports[`eslint with-githooks 4`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi",
    }
  }
/>
`;

exports[`eslint with-githooks 5`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:js\\": \\"eslint . -c .eslintrc.strict.js\\"
  },
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"8.0.2\\",
    \\"eslint\\": \\"6.5.1\\",
    \\"eslint-plugin-import\\": \\"2.18.2\\",
    \\"husky\\": \\"3.0.9\\",
    \\"lint-staged\\": \\"9.4.2\\",
    \\"npm-run-all\\": \\"4.1.5\\"
  },
  \\"husky\\": {
    \\"hooks\\": {
      \\"pre-commit\\": \\"lint-staged\\"
    }
  },
  \\"lint-staged\\": {
    \\"src/**/*.{js,jsx}\\": [
      \\"eslint\\"
    ]
  }
}",
    }
  }
/>
`;

exports[`eslint with-githooks 6`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": ".eslintignore,.eslintrc.js,.eslintrc.strict.js,.huskyrc,package.json",
    }
  }
/>
`;

exports[`eslint with-prettier 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/.idea/
/node_modules/
/*.js
/dist
/build
/coverage
/.next
",
    }
  }
/>
`;

exports[`eslint with-prettier 2`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	extends: [
		'./.eslintrc.strict.js',
	].map(require.resolve),
	/* define rules for IDE only here https://github.com/namics/frontend-defaults/issues/12 */
	rules: {
		'no-console': 1
	}
};
",
    }
  }
/>
`;

exports[`eslint with-prettier 3`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = {
	extends: [
		'@namics/eslint-config/configurations/es8-react.js',
		'@namics/eslint-config/configurations/es8-react-disable-styles.js',
	].map(require.resolve),
};
",
    }
  }
/>
`;

exports[`eslint with-prettier 4`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "# Node
**/node_modules
**/package.json
**/package-lock.json

# Generated
**/bower.json
**/lerna.json

# Build
**/build
**/dist
**/public
**/coverage
**/storybook-static
**/.next

# Nitro
**/project/blueprints
**/.yo-rc.json",
    }
  }
/>
`;

exports[`eslint with-prettier 5`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "module.exports = require('@namics/prettier-config');
",
    }
  }
/>
`;

exports[`eslint with-prettier 6`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"scripts\\": {
    \\"lint\\": \\"npm-run-all lint:*\\",
    \\"lint:js\\": \\"eslint . -c .eslintrc.strict.js\\",
    \\"prettier\\": \\"prettier --write \\\\\\"**/*.*(js|jsx|ts|tsx|json|md)\\\\\\"\\"
  },
  \\"devDependencies\\": {
    \\"@namics/eslint-config\\": \\"8.0.2\\",
    \\"@namics/prettier-config\\": \\"0.3.1\\",
    \\"eslint\\": \\"6.5.1\\",
    \\"eslint-plugin-import\\": \\"2.18.2\\",
    \\"npm-run-all\\": \\"4.1.5\\",
    \\"prettier\\": \\"1.18.2\\"
  }
}",
    }
  }
/>
`;

exports[`eslint with-prettier 7`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": ".eslintignore,.eslintrc.js,.eslintrc.strict.js,.prettierignore,.prettierrc.js,package.json",
    }
  }
/>
`;
